# UM_Aulas

./: README.md
PERFIL_MFES/EM/: classroom_fol.ele  desafio3.ele  graphs.ele  production.ele  trash_fol.ele
PERFIL_MFES/EM/analyzer/: camaleoes.ele  cards_analy.ele  cards_analy.thm
PERFIL_MFES/VF/SMT/: 2.smt2  3.smt2  4.smt2  5.smt2  7.smt2
PERFIL_MFES/VF/SMT/assignment/: futoshiki.smt2  matrix.c  matrix.smt2
PERFIL_MFES/VF/SMT/assignment/Futoshiki/: Futoshiki.cabal  LICENSE  README.md  stack.yaml
PERFIL_MFES/VF/SMT/assignment/Futoshiki/.stack-work/: stack.sqlite3
PERFIL_MFES/VF/SMT/assignment/Futoshiki/.stack-work/ghci/adf04aa2/: cabal_macros.h
PERFIL_MFES/VF/SMT/assignment/Futoshiki/.stack-work/ghci/ff3e3ee4/: cabal_macros.h
PERFIL_MFES/VF/SMT/assignment/Futoshiki/examples/: 4by4.txt  6by6.solution  6by6.txt  9by9.solution  9by9.txt
PERFIL_MFES/VF/SMT/assignment/Futoshiki/src/: Main.hs
PERFIL_SDC/FSD/1_Chat_Server_SocketChannel/src/: ClientReader.java  ClientWritter.java  Main.java  MessageHandler.java
PERFIL_SDC/FSD/Chat_Server/src/: ClientReader.java  ClientWritter.java  Main.java  (+1 more)
PERFIL_SDC/FSD/Chat_Server_fut/: pom.xml
PERFIL_SDC/FSD/election_sync/: pom.xml
PERFIL_SDC/PSD/Erlang/: login_manager.erl
PERFIL_SDC/PSD/zeroMQ_aggregation_service/: pom.xml
PERFIL_SDC/SDB/g02/: Vagrantfile
PERFIL_SDC/SDB/g03/: Vagrantfile
PERFIL_SDC/SDB/g05/: playbook.yml
PERFIL_SDC/SDB/g05_2/: hosts  site.yml  template.env
PERFIL_SDC/SDLE/G00/: main.py
PERFIL_SDC/SDLE/G01/: main.py
PERFIL_SDC/TF/G00/: pom.xml
PERFIL_SDC/TF/G03/: pom.xml
(+63 files in other folders)
