name:                Futoshiki
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Kaixi26/Futoshiki#readme
license:             BSD3
license-file:        LICENSE
author:              Jorge Cerqueira
maintainer:          a85573@uminho.pt
copyright:           MIT
category:            Puzzle
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Futoshiki
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , process >= 1.6
